--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 								</ul>
 							</div>
 							<div class="copyright">
-								Desarrollado por
+								Desarrollado 
 							</div>
 						</div>
 					</div>
