--- a/index.html
+++ b/index.html
@@ -47,6 +47,51 @@
 		</div>
 	</div>
 	
+	<!--Login Modal -->
+
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	  	<div class="modal-dialog modal-dialog-centered" role="document">
+	    	<div id="login-modal" class="modal-content">
+				<div class="modal-header">
+					<div class="login-modal-title">						
+	        			<div class="info_form_title modal-title">Inicio de Sesión</div>
+					</div>
+        			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          				<span aria-hidden="true">&times;</span>
+        			</button>
+	    		</div>
+	      		<div class="modal-body">
+	        		<div class="container">
+	        			<div class="form-row">
+	        				<div class="col">
+	        					<form>
+	        						<div class="form-group">
+	        							<input type="text" class="info_form_dep info_input" name="" placeholder="Usuario">
+	        						</div>
+	        						<div class="form-group">
+	        							<input type="password" class="info_form_dep info_input" name="" placeholder="Contraseña">
+	        						</div>
+	        						<div class="form-group">
+	        							<button class="info_form_button">INGRESAR</button>
+	        						</div>
+	        						<div class="form-group">
+	        							<div class="row">
+											<div class="col-6">
+
+											</div>
+											<div class="col-6">
+												<a href="#" id="password-reset">Olvide mi Contraseña...</a>
+											</div>
+	        							</div>	        							
+	        						</div>
+	        					</form>
+	        				</div>
+	        			</div>
+	        		</div>
+	      		</div>
+	    	</div>
+	  	</div>
+	</div>
 		
 	<!-- Home -->
 
@@ -69,7 +114,7 @@
 										<div class="header_top_nav">
 											<ul class="d-flex flex-row align-items-center justify-content-start">
 												<li><a href="#">Mesa de ayuda</a></li>
-												<li><a href="#"></a>Inicio de Sesión</li>
+												<li><a href="#" id="show-login-modal">Inicio de Sesión</a></li>
 												<li><a href="#">Moodle</a></li>
 											</ul>
 										</div>
