--- a/listaEntrada.html
+++ b/listaEntrada.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Sedes</title>
+<title>Administrar Entradas</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Health medical template project">
@@ -166,29 +166,33 @@
 				<table class="table table-hover">
 				  <thead>
 				    <tr>
-				      <th scope="col">#</th>
-				      <th scope="col">First</th>
-				      <th scope="col">Last</th>
-				      <th scope="col">Handle</th>
+				      <th scope="col">Codigo</th>
+				      <th scope="col">Titulo</th>
+				      <th scope="col">Descripcion</th>
+				      <th scope="col">Tipo</th>
+				      <th scope="col">Opción</th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr>
 				      <th scope="row">1</th>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
+				      <td>Titulo Prueba</td>
+				      <td>Descripción prueba</td>
+				      <td>Tipo Prueba</td>
+				      <td>
+				      	<button class="contact_button_list" id="contact_button">Actualizar</button>
+				      	<button class="contact_button_list" id="contact_button">Desactivar</button>
+				      </td>
 				    </tr>
 				    <tr>
-				      <th scope="row">2</th>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td colspan="2">Larry the Bird</td>
-				      <td>@twitter</td>
+				      <th scope="row">1</th>
+				      <td>Titulo Prueba</td>
+				      <td>Descripción prueba</td>
+				      <td>Tipo Prueba</td>
+				      <td>
+				      	<button class="contact_button_list" id="contact_button">Actualizar</button>
+				      	<button class="contact_button_list" id="contact_button">Desactivar</button>
+				      </td>
 				    </tr>
 				  </tbody>
 				</table>
@@ -240,6 +244,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 	<!-- Footer -->
 
 		<footer class="footer">
@@ -346,7 +351,6 @@
 			</div>
 		</div>
 	</footer>
-</div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
