--- a/index.html
+++ b/index.html
@@ -26,17 +26,29 @@
 
 	<div class="menu trans_500">
 		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
+			<a href=""  id="show-login-modal">Iniciar Sesión</a>
 			<div class="menu_close_container"><div class="menu_close"></div></div>
 			<form action="#" class="menu_search_form">
 				<input type="text" class="menu_search_input" placeholder="Buscar en menu" required="required">
 				<button class="menu_search_button"><i class="fa fa-search" aria-hidden="true"></i></button>
 			</form>
 			<ul>
-				<li class="menu_item"><a href="index.html">Home</a></li>
-				<li class="menu_item"><a href="#">About us</a></li>
-				<li class="menu_item"><a href="#">Services</a></li>
-				<li class="menu_item"><a href="news.html">News</a></li>
-				<li class="menu_item"><a href="contact.html">Contact</a></li>
+				<li class="menu_item"><a href="index.html">Inicio</a></li>
+				<h1 style="text-align: left; color: black">Nosotros</h1>
+				<li class="menu_item"><a href="sedes.html">Sedes</a></li>
+				<li class="menu_item"><a href="entidad.html">Entidad</a></li>
+				<li class="menu_item"><a href="directorioFuncionarios.html">Directorio Funcionarios</a></li>
+				<li class="menu_item"><a href="directorioInstitucional.html">Directorio Institucional</a></li>
+				<li class="menu_item"><a href="proceso.html">Procesos y procedimientos</a></li>
+				<li class="menu_item"><a href="#">Correo Interno</a></li>
+				<h1 style="text-align: left; color: black">Infórmate</h1>
+				<li class="menu_item"><a href="noticias.html">Noticias</a></li>
+				<li class="menu_item"><a href="datosAbiertos.html">Datos Abiertos</a></li>
+				<li class="menu_item"><a href="convocatorias.html">Convocatorias</a></li>
+				<li class="menu_item"><a href="pqr.html">Preguntas y Respuestas</a></li>
+				<li class="menu_item"><a href="metas.html">Metas, Objetivos e indicadores</a></li>
+				<li class="menu_item"><a href="ofertasEmpleo.html">Ofertas de empleo</a></li>
+				<li class="menu_item"><a href="ofertasEmpleo.html"></a></li>
 			</ul>
 		</div>
 		<div class="menu_social">
@@ -68,7 +80,7 @@
 	        		<div class="container">
 	        			<div class="form-row">
 	        				<div class="col">
-	        					<form class="FormularioLogin" action="controlers/controladorInicioSesion.php" method="post">
+	        					<form class="FormularioLogin" action="controlers/controladorInicioSesion.php" method="POST">
 	        						<div class="form-group">
 	        							<input type="text" class="info_form_dep info_input" name="usuario" placeholder="Usuario">
 	        						</div>
