The megamenu has been created

--- a/index.html
+++ b/index.html
@@ -129,86 +129,39 @@
 						</div>
 					</div>
 				</div>
-				<div class="header_nav" id="header_nav_pin">
-					<nav class="navbar navbar-expand-lg navbar-light megamenuback">
-					    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
-										<span class="navbar-toggler-icon"></span>
-							  </button>
-					    <div class="collapse navbar-collapse mega-dropdown " id="navbar" >
-					     <ul class="navbar-nav mr-auto">
-					      <li class="nav-item dropdown megamenu-li">
-					       <a class="nav-link dropdown-toggle" href="" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menú</a>
-					       <div class="dropdown-menu megamenu dropdown-Megamenu" aria-labelledby="dropdown01" style="overflow: auto;">
-					        <div class="row">
-					         <div class="col-sm-6 col-lg-3">
-					          <h5>Nosotros</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Inicio</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Sedes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Entida</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Directorio Funcionarios</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Directorio Institucional</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Procesos y Procedimientos</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Correo Interno</a>
-					         </div>
-					         <div class="col-sm-6 col-lg-3">
-					          <h5>Infórmate</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Noticias</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Datos Abiertos</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Convocatorias</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Preguntas y respuestas</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Metas, Objetivos e indicadores</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Ofertas de empleo</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Control</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Información Adicional</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Población Vulnerable</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Glosario</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Contrataciones</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Ejecución de contratos</a>
-					         </div>
-							 <div class="col-sm-6 col-lg-3">
-					          <h5>Documentos</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Rendición de cuentas</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Informes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Estudios e investigaciones</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Proyectos en ejecución</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Informes de PQRS</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Normatividad</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Políticas y lineamientos</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Planes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Programas</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Presupuesto</a>
-					         </div>
-							 <div class="col-sm-6 col-lg-3">
-					          <h5>Participa</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Calendario de Actividades</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Niños, Niñas y Adolecentes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Retos de participacón</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Encuesta</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Instancias de Participación</a>
-					         </div>
-					          <div class="col-sm-6 col-lg-3">
-					          <h5>Atención Ciudadana</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Transparencia y acceso</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Tramites y servicios</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Mecanismos de control</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Transparencia</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Recepción de solicitudes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Política y protección de datos</a>
-					         </div>
-					        </div>
-					       </div>
-					      </li>
-					     </ul>
-					     <div class="search_content d-flex flex-row align-items-center justify-content-end ml-auto">
-							<form action="#" id="search_container_form" class="search_container_form">
-								<input type="text" class="search_container_input" placeholder="Consultar" required="required">
-								<button class="search_container_button"><i class="fa fa-search" aria-hidden="true"></i></button>
-							</form>
-						</div>
-					    </div>
-
-					   </nav>	
-			</div>
+				<div class="header_nav" id="header_nav_pin">	
+			        <nav class="nav-bar">
+			            <ul>
+			                <li>Menu
+			                    <div class="mega-menu">
+			                        <div class="inner-mega-menu">
+			                            <p>Inicio</p>
+			                            <p>Nosotros</p>
+			                            <p>Sedes</p>
+			                            <p>Entidad</p>
+			                        </div>
+			                        <div class="inner-mega-menu">
+			                            <p>Directorio Funcionarios</p>
+			                            <p>Directorio Institucional</p>
+			                            <p>Procesos y procedimientos</p>
+			                            <p>Correo Interno</p>
+			                        </div>
+			                        <div class="inner-mega-menu">
+			                            <p>Infórmate</p>
+			                            <p>Noticias</p>
+			                            <p>Datos Abiertos</p>
+			                            <p>Convocatorias</p>
+			                        </div>
+			                        <div class="inner-mega-menu">
+			                            <p>Preguntas y Respuestas</p>
+			                            <p>Metas, Objetivos e indicadores</p>
+			                            <p>Ofertas de empleo</p>
+			                        </div> 
+			                    </div>
+			                </li>
+			            </ul>
+			        </nav>
+				</div>
 		</header>
 
 		<div class="home_container">
