The Login has been repair

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 	<!--Login Modal -->
 
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 	  	<div class="modal-dialog modal-dialog-centered" role="document">
 	    	<div id="login-modal" class="modal-content">
 				<div class="modal-header">
@@ -130,7 +130,7 @@
 										<div class="header_top_nav">
 											<ul class="d-flex flex-row align-items-center justify-content-start">
 												<li><a href="#">Correo interno</a></li>
-												<li><a href="#" id="show-login-modal">Inicio de Sesión</a></li>
+												<li><a href="#" id="show-login">Inicio de Sesión</a></li>
 												<li><a href="#">Moodle</a></li>
 											</ul>
 										</div>
