--- a/index.html
+++ b/index.html
@@ -143,32 +143,65 @@
 				</div>
 				<div class="header_nav" id="header_nav_pin">	
 			        <nav class="nav-bar">
+			        	<span class="fi-monitor"></span>
 			            <ul>
 			                <li>Menu
 			                    <div class="mega-menu">
 			                        <div class="inner-mega-menu">
-			                            <p>Inicio</p>
-			                            <p>Nosotros</p>
-			                            <p>Sedes</p>
-			                            <p>Entidad</p>
+			                        	<h3>NOSOTROS:</h3>
+
+			                            <p > <i class="fa fa-home"> </i> Inicio </p>
+			                            <p> <i class="fa fa-building"> </i> Sedes</p>
+			                            <p><i class="fa fa-hospital-o"> </i> Entidad</p>
+			                            <p><i class="fa fa-address-card"></i> Directorio Funcionarios</p>
+			                            <p> <i class="fa fa-address-book-o"></i> Directorio Institucional</p>
+			                            <p> <i class="fa fa-history"></i> Procesos y procedimientos</p>
+			                            <p> <i class="fa fa-envelope-open"></i> Correo Interno</p>
 			                        </div>
 			                        <div class="inner-mega-menu">
-			                            <p>Directorio Funcionarios</p>
-			                            <p>Directorio Institucional</p>
-			                            <p>Procesos y procedimientos</p>
-			                            <p>Correo Interno</p>
+			                             <h3>Infórmate:</h3>
+					          			<p > <i class="fa fa-newspaper-o"> </i> Noticias</p>
+							          <p > <i class="fa fa-database"> </i> Datos Abiertos</p>
+							          <p > <i class="fa fa-globe"> </i> Convocatorias</p>
+							          <p > <i class="fa fa-question-circle-o"> </i> Preguntas y respuestas</p>
+							          <p > <i class="fa fa-flag-checkered"> </i> Metas, Objetivos e indicadores</p>
+							          <p > <i class="fa fa-user-plus"> </i> Ofertas de empleo</p>
+							          <p > <i class="fa fa-gamepad"> </i> Control</p>
+							          <p > <i class="fa fa-info-circle"> </i> Información Adicional</p>
+							          <p > <i class="fa fa-users"> </i> Población Vulnerable</p>
+							          <p > <i class="fa fa-lenguage"> </i> Glosario</a>
+							          <p > <i class="fa fa-handshake-o"> </i> Contrataciones</p>
+							          <p > <i class="fa fa-flash"> </i> Ejecución de contratos</p>
 			                        </div>
 			                        <div class="inner-mega-menu">
-			                            <p>Infórmate</p>
-			                            <p>Noticias</p>
-			                            <p>Datos Abiertos</p>
-			                            <p>Convocatorias</p>
+			                           	<h3>Documentos:</h3>
+								          <p > <i class="fa fa-folder-open-o"> </i> Rendición de cuentas</p>
+								          <p > <i class="fa fa-file-text-o"> </i> Informes</p>
+								          <p > <i class="fa fa-bar-chart"> </i> Estudios e investigaciones</p>
+								          <p > <i class="fa fa-cogs"> </i> Proyectos en ejecución</p>
+								          <p > <i class="fa fa-file-archive-o"> </i> Informes de PQRS</p>
+								          <p > <i class="fa fa-list"> </i> Normatividad</p>
+								          <p > <i class="fa fa-clone"> </i> Políticas y lineamientos</p>
+								          <p > <i class="fa fa-cubes"> </i> Planes</p>
+								          <p > <i class="fa fa-desktop"> </i> Programas</p>
+								          <p > <i class="fa fa-money"> </i> Presupuesto</p>
 			                        </div>
 			                        <div class="inner-mega-menu">
-			                            <p>Preguntas y Respuestas</p>
-			                            <p>Metas, Objetivos e indicadores</p>
-			                            <p>Ofertas de empleo</p>
+			                            <h3>Participa:</h3>
+								          <p > <i class="fa fa-calendar"> </i> Calendario de Actividades</p>
+								          <p > <i class="fa fa-anchor"> </i> Retos de participacón</p>
+								          <p > <i class="fa fa-chek-square-o"> </i> Encuesta</p>
+								          <p > <i class="fa fa-bullhorn"> </i> Instancias de Participación</p>
 			                        </div> 
+			                        <div class="inner-mega-menu">
+			                        	<h3>Atención Ciudadana: </h3>
+								          <p > <i class="fa fa-floppy-o"> </i> Transparencia y acceso</p>
+								          <p > <i class="fa fa-files-o"> </i> Tramites y servicios</p>
+								          <p > <i class="fa fa-binoculars"> </i> Mecanismos de control</p>
+								          <p > <i class="fa fa-globe"> </i> Transparencia</p>
+								          <p > <i class="fa fa-cube"> </i> Recepción de solicitudes</p>
+								          <p > <i class="fa fa-user-secret"> </i> Política y protección de datos</p>
+			                        </div>
 			                    </div>
 			                </li>
 			            </ul>
