--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							          <p > <i class="fa fa-gamepad"> </i> Control</p>
 							          <p > <i class="fa fa-info-circle"> </i> Información Adicional</p>
 							          <p > <i class="fa fa-users"> </i> Población Vulnerable</p>
-							          <p > <i class="fa fa-lenguage"> </i> Glosario</a>
+							          <p > <i class="fa fa-language"> </i> Glosario</a>
 							          <p > <i class="fa fa-handshake-o"> </i> Contrataciones</p>
 							          <p > <i class="fa fa-flash"> </i> Ejecución de contratos</p>
 			                        </div>
@@ -190,7 +190,7 @@
 			                            <h3>Participa:</h3>
 								          <p > <i class="fa fa-calendar"> </i> Calendario de Actividades</p>
 								          <p > <i class="fa fa-anchor"> </i> Retos de participacón</p>
-								          <p > <i class="fa fa-chek-square-o"> </i> Encuesta</p>
+								          <p > <i class="fa fa-check-square-o"> </i> Encuesta</p>
 								          <p > <i class="fa fa-bullhorn"> </i> Instancias de Participación</p>
 			                        </div> 
 			                        <div class="inner-mega-menu">
